force-app/main/default/objects/Product_Recommendation_Matrix__mdt/Product_Recommendation_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Product Recommendation Matrix</label>
    <pluralLabel>Product Recommendation Matrix</pluralLabel>
</CustomObject>