force-app/main/default/objects/Product_Recommendation_Matrix__mdt/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Stores patient age</description>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 2</fullName>
            </value>
            <value>
                <fullName>2+</fullName>
            </value>
            <value>
                <fullName>Under 18</fullName>
            </value>
            <value>
                <fullName>18+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>