force-app/main/default/objects/Product_Recommendation_Matrix__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designed to fetch only active record , can hold future or past record in inactive stage.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>