force-app/main/default/objects/Product_Recommendation_Matrix__mdt/fields/Recommended_Product__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Product__c</fullName>
    <description>Stores product to be recommended to patient</description>
    <label>Recommended Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>