force-app/main/default/objects/Product_Recommendation_Matrix__mdt/fields/Sensor_CGM__c.field-meta.xml
<CustomField>
    <fullName>Sensor_CGM__c</fullName>
    <description>Stores sensor used by patient</description>
    <label>Sensor/CGM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dexcom G6</fullName>
            </value>
            <value>
                <fullName>Dexcom G7</fullName>
            </value>
            <value>
                <fullName>Freestyle Libre 2</fullName>
            </value>
            <value>
                <fullName>Freestyle Libre 2 Plus</fullName>
            </value>
            <value>
                <fullName>Freestyle Libre 3</fullName>
            </value>
            <value>
                <fullName>Other CGM</fullName>
            </value>
            <value>
                <fullName>Not Currently Using a Sensor/CGM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>