force-app/main/default/objects/Product_Recommendation_Matrix__mdt/fields/Type_of_Diabetes__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Diabetes__c</fullName>
    <description>Stores type of diabetes</description>
    <label>Type of Diabetes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2: Using Insulin</fullName>
            </value>
            <value>
                <fullName>Other/Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>